# predict-otron-9001

./: .aiignore  .dockerignore  .gitignore  CLEANUP.md  Cargo.toml  Dockerfile  README.md  ROOT_CAUSE_ANALYSIS.md  cli.ts  docker-compose.yml  package-lock.json  package.json  run_server.sh  server_fresh.txt  server_log.txt  test_predict_otron.sh  test_repetition.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/chat-ui/: Cargo.toml  README.md
crates/chat-ui/src/: app.rs  main.rs
crates/chat-ui/style/: main.scss
crates/cli/: Cargo.toml  README.md  build.rs  bun_target.rs
crates/embeddings-engine/: Cargo.toml  Dockerfile  README.md
crates/embeddings-engine/src/: lib.rs  main.rs
crates/gemma-runner/: Cargo.toml  README.md
crates/gemma-runner/src/: gemma_api.rs  gemma_cli.rs  main.rs
crates/helm-chart-tool/: Cargo.toml
crates/helm-chart-tool/src/: main.rs
crates/inference-engine/: Cargo.toml  Dockerfile  README.md
crates/inference-engine/src/: cli_main.rs  inference.rs  lib.rs  main.rs  model.rs  openai_types.rs  server.rs  text_generation.rs  token_output_stream.rs  utilities_lib.rs
crates/inference-engine/tests/: model_tests.rs  text_generation_tests.rs  token_output_stream_tests.rs
crates/legacy-inference-engine/: Cargo.toml  README.md  ROOT_CAUSE_ANALYSIS.md  test_cli.sh
crates/legacy-inference-engine/src/: server.rs  text_generation.rs
crates/legacy-inference-engine/tests/: model_tests.rs  text_generation_tests.rs  token_output_stream_tests.rs
crates/leptos-app/: Cargo.toml  Dockerfile
crates/leptos-app/.cargo/: config.toml
crates/leptos-app/src/: app.rs  lib.rs  main.rs
crates/leptos-chat/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  run.sh
crates/leptos-chat/src/: lib.rs
crates/leptos-chat/style/: main.css
crates/llama-runner/: Cargo.toml  README.md
crates/llama-runner/src/: lib.rs  llama_api.rs  llama_cli.rs  main.rs
crates/predict-otron-9000/: Cargo.toml  Dockerfile  README.md
crates/predict-otron-9000/src/: config.rs  ha_mode.rs  main.rs  proxy.rs  standalone.rs  standalone_mode.rs
crates/predict-otron-9000/src/middleware/: metrics.rs  mod.rs
crates/utils/src/: lib.rs  token_output_stream.rs
docs/: ARCHITECTURE.md  BENCHMARKING.md  OPTIMIZATIONS.md  PERFORMANCE.md  SERVER_CONFIG.md  TESTING.md
helm-chart-tool/: README.md
helm-chart-tool/src/: main.rs
integration/: README.md  package.json
integration/cli/: README.md  build.rs  bun_target.rs
integration/cli/package/: cli.ts  package.json
integration/cli/src/: main.rs
integration/gemma-runner/: Cargo.toml
integration/gemma-runner/src/: gemma_api.rs  gemma_cli.rs  lib.rs  main.rs
integration/helm-chart-tool/: README.md
integration/helm-chart-tool/src/: main.rs
integration/llama-runner/: Cargo.toml
integration/llama-runner/src/: lib.rs  llama_api.rs  llama_cli.rs  main.rs
integration/openai-client-tests/: actual_openai.test.ts  local_openai.test.ts
integration/utils/: Cargo.toml
integration/utils/src/: audio.rs  imagenet.rs  lib.rs
scripts/: build_all_platforms.sh  build_cli.sh  build_ui.sh  cli.ts  curl_chat.sh  curl_chat_stream.sh  performance_test_embeddings.sh  performance_test_inference.sh  run.sh  run_llama.sh  run_server.sh  test_request.sh
