[workspace]
members = [ 
    "crates/predict-otron-9000",
    "crates/inference-engine",
    "crates/embeddings-engine",
    "crates/leptos-app",
    "crates/helm-chart-tool",
    "crates/llama-runner",
    "crates/gemma-runner"
]
default-members = ["crates/predict-otron-9000"]
resolver = "2"

[[workspace.metadata.leptos]]
# project name
bin-package = "leptos-app"
lib-package = "leptos-app"