[workspace]
members = [ 
    "crates/predict-otron-9000",
    "crates/inference-engine",
    "crates/embeddings-engine",
    "integration/helm-chart-tool",
    "integration/llama-runner",
    "integration/gemma-runner",
    "integration/cli",
    "crates/chat-ui"
, "integration/utils"]
default-members = ["crates/predict-otron-9000"]
resolver = "2"

[workspace.package]
version = "0.1.4"

# Compiler optimization profiles for the workspace
[profile.release]
opt-level = 3
debug = false
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
strip = false
overflow-checks = true

# Profile for fast development builds with some optimization
[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = true
overflow-checks = true

# Profile for benchmarking and profiling
[profile.bench]
opt-level = 3
debug = true
lto = "thin"
