[package]
name = "embeddings-engine"
version.workspace = true
edition = "2024"

[lib]
name = "embeddings_engine"
path = "src/lib.rs"

[[bin]]
name = "embeddings-engine"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fastembed = "4"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
async-openai = "0.28.3"
once_cell = "1.19.0"

# generates kubernetes manifests
[package.metadata.kube]
image = "ghcr.io/geoffsee/predict-otron-9000:latest"
cmd = ["./bin/embeddings-engine"]
replicas = 1
port = 8080