[package]
name = "helm-chart-tool"
version.workspace = true
edition = "2021"

[[bin]]
name = "helm-chart-tool"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"