[package]
name = "leptos-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
either = { version = "1.9", features = ["serde"] }
# Make async-openai optional and only included for non-wasm targets
async-openai-wasm = { default-features = false, version = "0.29" }
# Only include tokio for non-wasm targets
#tokio = { version = "1", default-features = false, features = ["sync", "macros", "io-util", "rt"] }
#reqwest = {version = "0.12.23", default-features = false, optional = false}
futures-util = "0.3"



web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Event",
    "EventTarget",
    "KeyboardEvent",
] }
gloo-net = "0.6.0"

[dependencies.uuid]
version = "1.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js", # Enable JavaScript RNG for WASM targets
]

# generates docker compose configuration
[package.metadata.compose]
image = "ghcr.io/geoffsee/leptos-chat:latest"
port = 8788


# generates kubernetes manifests
[package.metadata.kube]
image = "ghcr.io/geoffsee/leptos-chat:latest"
replicas = 1
port = 8788